<resources>
    <string name="app_name">LexileLevels</string>
    <string name="action_settings">Settings</string>
    <string name="beginQuiz">Begin Quiz</string>
    <string name="nextQuestion">Next Question</string>
    <string name="completionCongratulations">Congratulations for finishing all of the books and achieving proficiency in the English language!</string>
    <string name="quiz_score_history">Quiz Score History</string>

    <!-- icon names -->
    <string name="quiz_me">Quiz Me</string>
    <string name="recommendations">Recommendations</string>
    <string name="activity_log">Activity Log</string>
    <string name="libraries_near_me">Libraries Near Me</string>
    <string name="vocabulary_lists">Vocabulary Lists</string>
    <string name="uploads">Uploads</string>

    <string name="vocabulary_description">All of the vocabulary words for your chapter and their definitions are present below for your perusal.</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_activity_uploads">Uploads</string>

</resources>
