<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.lexilelevels.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:background="@color/appBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:orientation="vertical">

            <ImageView
                android:onClick="viewRecommendations"
                android:id="@+id/recommendations"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:src="@mipmap/uploads"
                android:layout_gravity="left|top"/>

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:text="@string/recommendations"
                 android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/activity_log"
                android:onClick="showActivityLog"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="130dp"
                android:src="@mipmap/activity_log"
                android:layout_gravity="left|top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/activity_log"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/quizMe"
                android:onClick="beginQuiz"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:src="@mipmap/recommendations"
                android:layout_gravity="left|top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/quiz_me"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/uploads"
                android:onClick="viewUploads"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:src="@mipmap/upload_books"
                android:layout_gravity="left|top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/uploads"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/nearby_libraries"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="130dp"
            android:src="@mipmap/nearby_libraries"
            android:layout_gravity="left|top"
            android:onClick="showMap"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/libraries_near_me"
            android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/vocabulary_lists"
            android:onClick="vocabLists"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="130dp"
            android:src="@mipmap/vocabulary_lists"
            android:layout_gravity="left|top"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/vocabulary_lists"
            android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
